# Aether

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  turbo.json
apps/api/: package.json
apps/web/: package.json
backend/api/: .env.example  Dockerfile  package.json  pyproject.toml
backend/api/src/: artifacts.py  config.py  dataset_connectors.py  db.py  dependencies.py  hf_client.py  inference.py  main.py  models.py  realtime.py  schemas.py  security.py  worker.py
backend/api/src/routers/: auth.py  datasets.py  generations.py  ops.py  registry.py  training.py  workspaces.py
backend/api/src/services/: dataset_ingestion.py  generation.py  inference.py
backend/api/tests/: test_auth.py  test_dataset_ingestion.py  test_generation_api.py  test_generation_service.py  test_refresh_helpers.py
docs/superpowers/plans/: 2026-05-10-sprint1-platform-kernel.md  2026-05-11-sprint2-generation-studio.md  2026-05-12-sprint3-dataset-ingestion.md
docs/superpowers/specs/: 2026-05-10-sprint1-platform-kernel-design.md  2026-05-11-sprint2-generation-studio-design.md  2026-05-12-sprint3-dataset-ingestion-design.md
frontend/app/: eslint.config.mjs  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/src/: middleware.ts
frontend/landing/: package.json
frontend/web/: Dockerfile  next.config.ts  tsconfig.tsbuildinfo
infra/: docker-compose.yml
ml/service/: Dockerfile  pyproject.toml
ml/service/src/: main.py  training_pipeline.py
prisma/: schema.prisma
src/: App.tsx  index.css
src/components/: HeroSection.tsx  NavigationBar.tsx  VideoBackground.tsx
src/styles/: theme.css
(+72 files in other folders)
